# zcash-swift-wallet-sdk

./: CHANGELOG.md  Cargo.toml  Package.resolved  Package.swift
Example/ZcashLightClientSample/ZcashLightClientSample/: AppDelegate.swift  DemoAppConfig.swift
Example/ZcashLightClientSample/ZcashLightClientSample.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Example/ZcashLightClientSample/ZcashLightClientSample/Sapling Parameters/: SaplingParametersViewController.swift
Example/ZcashLightClientSample/ZcashLightClientSample/Sync Blocks/: SyncBlocksListViewController.swift
Example/ZcashLightClientSample/ZcashLightClientSample/Test Servers/: TestServersViewController.swift
Example/ZcashLightClientSample/ZcashLightClientSample/Transaction Detail/: TransactionDetailViewController.swift
Frameworks/NullifierPIR.xcframework/: Info.plist
Frameworks/NullifierPIR.xcframework/ios-arm64/NullifierPIR.framework/Modules/: module.modulemap
Frameworks/NullifierPIR.xcframework/ios-arm64_x86_64-simulator/NullifierPIR.framework/: Info.plist
Frameworks/NullifierPIR.xcframework/ios-arm64_x86_64-simulator/NullifierPIR.framework/Headers/: nullifier_client_ffiFFI.h
Sources/PIRMatmulStubs/: matmul_stubs.c
Sources/PIRMatmulStubs/include/: PIRMatmulStubs.h  module.modulemap
Sources/ZcashLightClientKit/: ClosureSynchronizer.swift  CombineSynchronizer.swift  Synchronizer.swift
Sources/ZcashLightClientKit/Block/: CompactBlockProcessor.swift
Sources/ZcashLightClientKit/Block/DatabaseStorage/: SimpleConnectionProvider.swift
Sources/ZcashLightClientKit/Checkpoint/: BundleCheckpointSource.swift
Sources/ZcashLightClientKit/Entity/: TransactionEntity.swift
Sources/ZcashLightClientKit/Error/: ZcashError.swift  ZcashErrorCode.swift  ZcashErrorCodeDefinition.swift
Sources/ZcashLightClientKit/Metrics/: SDKMetrics.swift
Sources/ZcashLightClientKit/Modules/PIR/: PIRChecker.swift
Sources/ZcashLightClientKit/Modules/PIR/FFI/: NullifierPIR.swift
Sources/ZcashLightClientKit/Modules/Service/: LightWalletService.swift
Sources/ZcashLightClientKit/Modules/Service/GRPC/: LightWalletGRPCService.swift
Sources/ZcashLightClientKit/Modules/Service/GRPC/ProtoBuf/: compact_formats.grpc.swift  compact_formats.pb.swift  proposal.grpc.swift  proposal.pb.swift  service.grpc.swift  service.pb.swift
Sources/ZcashLightClientKit/Modules/Service/GRPC/ProtoBuf/proto/: service.proto
Sources/ZcashLightClientKit/Rust/: ZcashRustBackend.swift  ZcashRustBackendWelding.swift
Sources/ZcashLightClientKit/Rust/Spendability/: SpendabilityBackend.swift  SpendabilityTypes.swift
Sources/ZcashLightClientKit/Rust/Voting/: PirSnapshotResolver.swift  VotingRustBackend.swift  VotingTypes.swift
Sources/ZcashLightClientKit/Rust/Witness/: WitnessBackend.swift  WitnessTypes.swift
Sources/ZcashLightClientKit/Synchronizer/: ClosureSDKSynchronizer.swift  CombineSDKSynchronizer.swift  SDKSynchronizer+PIR.swift  SDKSynchronizer.swift
Sources/ZcashLightClientKit/Transaction/: WalletTransactionEncoder.swift
Sources/ZcashLightClientKit/Utils/: SDKFlags.swift
Tests/OfflineTests/: ClosureSynchronizerOfflineTests.swift  CombineSynchronizerOfflineTests.swift  PIRWitnessRetryOfflineTests.swift  SDKSynchronizerTransactionSubmissionTests.swift  SpendabilityTypesTests.swift  SynchronizerOfflineTests.swift  VotingRustBackendAppStorageTests.swift  VotingRustBackendDraftVoteTests.swift  WitnessTypesTests.swift
Tests/TestUtils/: DarkSideWalletService.swift  FakeService.swift  Stubs.swift
Tests/TestUtils/Sourcery/GeneratedMocks/: AutoMockable.generated.swift
rust/: CHANGELOG.md
rust/src/: change_discovery.rs  ffi.rs  lib.rs  spendability.rs  voting.rs  witness.rs
