[package]
name = "libzcashlc"
version = "2.4.6"
authors = [
    "Jack Grigg <thestr4d@gmail.com>",
    "Lukas Korba <lukas@tangiblecodes.com>",
    "Kris Nuttycombe<kris@nutty.land>",
    "Francisco Gindre",
]
license = "MIT"
edition = "2024"
rust-version = "1.90"
build = "rust/build.rs"

[dependencies]

# Zcash
orchard = "0.11"
sapling = { package = "sapling-crypto", version = "0.5", default-features = false }
transparent = { package = "zcash_transparent", version = "0.6", default-features = false }
zcash_address = { version = "0.10" }
zcash_client_backend = { version = "0.21", features = [
    "lightwalletd-tonic-tls-webpki-roots",
    "orchard",
    "pczt",
    "tor",
    "transparent-inputs",
    "unstable",
] }
zcash_client_sqlite = { version = "0.19", features = ["orchard", "transparent-inputs", "unstable", "serde", "spendability-pir"] }
zcash_note_encryption = "0.4.1"
zcash_primitives = "0.26"
zcash_proofs = "0.26"
zcash_protocol = "0.7"
zcash_script = "0.4"
zip32 = "0.2"
pczt = { version = "0.5", features = ["prover"] }

# Infrastructure
prost = "0.14"
rusqlite = "0.37"
secrecy = "0.8"
rand = "0.8"
nonempty = "0.11"

# FFI
anyhow = "1.0"
ffi_helpers = "0.3"
uuid = "1.1"
bitflags = "2"

# HTTP
bytes = "1"
http = "1"
http-body-util = "0.1"

# Initialization
cfg-if = "1.0"
rayon = "1.7"

# lightwalletd
tonic = "0.14"

# Logging
log-panics = "2.0"
once_cell = "1.0"
sharded-slab = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Tor
fs-mistrust = "0.12"
tor-rtcompat = "0.35"
rust_decimal = { version = "1", default-features = false, features = ["c-repr"] }
# - The "static" feature is required for the "compression" default feature of arti-client.
xz2 = { version = "0.1", features = ["static"] }

# Spendability PIR
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spend-client = { git = "https://github.com/valargroup/spendability-pir.git", rev = "bd5ef155bc84d0e25c6a14df31d470d16fc20aeb" }
spend-types = { git = "https://github.com/valargroup/spendability-pir.git", rev = "bd5ef155bc84d0e25c6a14df31d470d16fc20aeb" }
witness-client = { git = "https://github.com/valargroup/spendability-pir.git", rev = "bd5ef155bc84d0e25c6a14df31d470d16fc20aeb" }

[dev-dependencies]
zcash_client_sqlite = { version = "0.19", features = ["test-dependencies"] }

[build-dependencies]
bindgen = "0.72"
cbindgen = "0.29"
cc = "1.0"

[lib]
name = "zcashlc"
path = "rust/src/lib.rs"
crate-type = ["staticlib"]

[profile.release]
lto = true

[patch.crates-io]
zcash_address        = { git = "https://github.com/valargroup/librustzcash.git", rev = "a90d53b52c317a9693a46f5cb09e7032425a4f13" }
zcash_client_backend = { git = "https://github.com/valargroup/librustzcash.git", rev = "a90d53b52c317a9693a46f5cb09e7032425a4f13" }
zcash_client_sqlite  = { git = "https://github.com/valargroup/librustzcash.git", rev = "a90d53b52c317a9693a46f5cb09e7032425a4f13" }
zcash_primitives     = { git = "https://github.com/valargroup/librustzcash.git", rev = "a90d53b52c317a9693a46f5cb09e7032425a4f13" }
zcash_proofs         = { git = "https://github.com/valargroup/librustzcash.git", rev = "a90d53b52c317a9693a46f5cb09e7032425a4f13" }
zcash_protocol       = { git = "https://github.com/valargroup/librustzcash.git", rev = "a90d53b52c317a9693a46f5cb09e7032425a4f13" }
zcash_transparent    = { git = "https://github.com/valargroup/librustzcash.git", rev = "a90d53b52c317a9693a46f5cb09e7032425a4f13" }
pczt                 = { git = "https://github.com/valargroup/librustzcash.git", rev = "a90d53b52c317a9693a46f5cb09e7032425a4f13" }
